--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: npm i http-server
       - run:
           name: Run server in background
-          command: './node_modules/http-server/bin/http-server &'
+          command: './node_modules/http-server/bin/http-server'
           background: true
       - run:
           name: Run tests
